<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#615342" >
    
	 <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:digits="1234567890"
            style="@style/editTextStyle"
            android:hint="@string/hintdefaultAdress"
            android:inputType="number|textCapSentences" 
            android:layout_marginRight="70dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp">
        </EditText>

	 <EditText
	     android:id="@+id/port"
	     style="@style/editTextStyle"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_marginLeft="5dp"
	     android:layout_marginRight="70dp"
	     android:layout_marginTop="5dp"
	     android:ems="10"
	     android:hint="@string/hintdefaultPort"
	     android:inputType="number|textCapSentences" >

	     <requestFocus />
	 </EditText>
        
	 <EditText
	     android:id="@+id/timeout"
	     style="@style/editTextStyle"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_marginLeft="5dp"
	     android:layout_marginRight="70dp"
	     android:layout_marginTop="5dp"
	     android:ems="10"
	     android:hint="@string/hintdefaultTimeout"
	     android:inputType="number|textCapSentences" >

        </EditText>
	  <Button
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:text="@string/Save"
	     android:id="@+id/accept"
	     android:layout_marginLeft="100dp"
	     android:layout_marginRight="100dp"/>
	  
</LinearLayout>
